fixed positions of button and a file visible.css

--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -1,34 +1,35 @@
-
-
 .navbar {
   position: fixed;
   top: 0;
-  left: -2000px; /* Change this to adjust the initial position */
-  width: 200px; /* Change this to adjust the width of the box */
+  left: -2000px;
+  /* Change this to adjust the initial position */
+  width: 200px;
+  /* Change this to adjust the width of the box */
   height: 820px;
-  background-color: rgba(51, 44, 44, 0.5); /* Change this to adjust the background color and transparency */
+  background-color: rgba(51, 44, 44, 0.5);
+  /* Change this to adjust the background color and transparency */
   color: white;
   padding: 20px;
   transition: left 0.5s ease-in-out;
   z-index: 1;
   transition: 1s;
-  }
+}
 
-  .navbar.visible {
-    left: 0;
-  }
-  
-  .navbar a {
-position: relative;
-display: block;
-padding: 10px 30px;
-border: 2px solid #00aeff;
-text-transform: uppercase;
-font-size: 18px;
-letter-spacing: 4px;
-color: #00aeff;
-text-decoration: none;
-  }
+.navbar.visible {
+  left: 0;
+}
+
+.navbar a {
+  position: relative;
+  display: block;
+  padding: 10px 30px;
+  border: 2px solid #00aeff;
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: 4px;
+  color: #00aeff;
+  text-decoration: none;
+}
 
 
 a.active {
@@ -44,78 +45,72 @@ a.active {
 
 
 .navbutton {
-      position: relative;
-      bottom: 0;
-      left: 0;
-      width: 100px;
-      height: 50px;
-      background-color: green;
-      border: 2px solid white;
-      color: white;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 5px;
-      outline: none;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-      transition: left 0.5s ease-in-out;
+  position: relative;
+  bottom: -5px;
+  left: 50px;
+  width: 75px;
+  height: 50px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  outline: none;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  transition: left 0.5s ease-in-out;
   z-index: 2;
   transition: 1s;
-      }
-    
+  flex-direction: column;
+  align-items: center;
+}
+
 .navbutton:hover {
-    transform: translateY(2px);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(254, 254, 254);
+}
 
 
-    
-    .navbutton.visible {
-      position: relative;
-      left: 250px;
-      transition: left 0.5s ease-in-out;
+
+
+.dark-button {
+  position: relative;
+  bottom: 13px;
+  left: 55px;
+  width: 100px;
+  height: 50px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  outline: none;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  transition: left 0.5s ease-in-out;
   z-index: 2;
   transition: 1s;
-    }
+}
 
-    .dark-button.visible {
-      position: relative;
-      left: 250px;
-      transition: left 0.5s ease-in-out;
-  z-index: 2;
-  transition: 1s;
-    }
+.dark-button:hover {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(254, 254, 254);
+}
 
-    .container.visible {
-      position: relative;
-      margin: 50px;
-      margin-left: 300px;
-      transition: left 0.5s ease-in-out;
-  z-index: 2;
-  transition: 1s;
-    }
+.button-line {
+  width: 40px;
+  height: 4px;
+  padding-bottom: 1.5px;
+  background-color: black;
+  margin: 6px 0;
+  border: 0.2px solid rgb(255, 255, 255);
+}
 
-
-    .dark-button{
-      position: relative;
-      bottom: 0;
-      left: 0;
-      width: 100px;
-      height: 50px;
-      background-color: rgb(255, 255, 255);
-      border: 2px solid rgb(0, 0, 0);
-      color: rgb(0, 0, 0);
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 5px;
-      outline: none;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-      transition: left 0.5s ease-in-out;
-  z-index: 2;
-  transition: 1s;
-
-    }
-
-
- 
+.navbutton:hover .button-line {
+  background-color: rgb(255, 255, 255);
+  border: 0.2px solid rgb(0, 0, 0);
+}
