--- a/src/Stylesheets/Darkmode.css
+++ b/src/Stylesheets/Darkmode.css
@@ -1,96 +1,109 @@
 .dark-mode {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-  }
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
 
 
 /*dark mode versions*/
-  .dark-mode .dark-button{
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    border: 2px solid rgb(254, 254, 254);
-  }
-
- .dark-mode .container2 {
-    width: 100%;
-    height: 100vh;
-    background: #232323;
-    display: flex;
-    justify-content: center;
-    border-radius: 15px;
-    border-color: #363636;
+.dark-mode .dark-button {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(254, 254, 254);
 }
-  
+
+.dark-mode .navbutton {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(254, 254, 254);
+}
+
+.dark-mode .button-line {
+  background-color: rgb(0, 0, 0);
+  border: 0.2px solid rgb(255, 255, 255);
+}
+
+.dark-mode .container2 {
+  width: 100%;
+  height: 100vh;
+  background: #232323;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  border-color: #363636;
+}
+
 .dark-mode .box {
-      width: 250px;
-      height: 250px;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-    }
+  width: 250px;
+  height: 250px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
 
-    .dark-mode .title {
-        width: 100%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: 50px;
-      }
-      .dark-mode .block1 {
-          width: 0%;
-          height: inherit;
-          background: #ffffff;
-          position: absolute;
-          animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
-          display: flex;
-        }
-  
-        .dark-mode .Firsttext {
-          font-family: 'Poppins';
-          color: #fff;
-          font-size: 32px;
-          -webkit-animation: mainFadeIn 2s forwards;
-          -o-animation: mainFadeIn 2s forwards;
-          animation: mainFadeIn 2s forwards;
-          animation-delay: 1.6s;
-          opacity: 0;
-          display: flex;
-          align-items: baseline;
-          position: relative;
-        }
+.dark-mode .title {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 50px;
+}
 
-        .dark-mode .role {
-        width: 100%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: 30px;
-        margin-top: -10px;
-      }
-      .dark-mode .block {
-          width: 0%;
-          height: inherit;
-          background: #ffffff;
-          position: absolute;
-          animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
-          animation-delay: 2s;
-          display: flex;
-        }
-  
-        .dark-mode .sectext {
-          animation: secFadeIn 2s forwards;
-          animation-delay: 3.2s;
-          opacity: 0;
-           font-weight: 400;
-          font-family: 'Lato';
-          color: #ffffff;
-          font-size: 12px;
-          text-transform: uppercase;
-          letter-spacing: 5px;
-        }
+.dark-mode .block1 {
+  width: 0%;
+  height: inherit;
+  background: #ffffff;
+  position: absolute;
+  animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
+  display: flex;
+}
 
-        .dark-mode .pfpRed:hover  {
-            transform: rotate(45deg);
-            box-shadow: 0 0 1px 15px rgba(255, 255, 255, 0.25), 0 0 1px 30px rgba(255, 0, 0, 0.25),  0 0 1px 30px rgba(252, 0, 0, 0.625);
-          }
+.dark-mode .Firsttext {
+  font-family: 'Poppins';
+  color: #fff;
+  font-size: 32px;
+  -webkit-animation: mainFadeIn 2s forwards;
+  -o-animation: mainFadeIn 2s forwards;
+  animation: mainFadeIn 2s forwards;
+  animation-delay: 1.6s;
+  opacity: 0;
+  display: flex;
+  align-items: baseline;
+  position: relative;
+}
+
+.dark-mode .role {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 30px;
+  margin-top: -10px;
+}
+
+.dark-mode .block {
+  width: 0%;
+  height: inherit;
+  background: #ffffff;
+  position: absolute;
+  animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
+  animation-delay: 2s;
+  display: flex;
+}
+
+.dark-mode .sectext {
+  animation: secFadeIn 2s forwards;
+  animation-delay: 3.2s;
+  opacity: 0;
+  font-weight: 400;
+  font-family: 'Lato';
+  color: #ffffff;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.dark-mode .pfpRed:hover {
+  transform: rotate(45deg);
+  box-shadow: 0 0 1px 15px rgba(255, 255, 255, 0.25), 0 0 1px 30px rgba(255, 0, 0, 0.25), 0 0 1px 30px rgba(252, 0, 0, 0.625);
+}
